kubernetes/uservice-ltdstatus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: u-ltdstatus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: u-ltdstatus
    spec:
      containers:

        - name: u-metricdev
          imagePullPolicy: "Always"
          image: "lsstsqre/uservice-ltdstatus"
          ports:
            -
              containerPort: 5000
              name: u-ltdstatus
