kubernetes/uservice-ltdstatus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: u-ltdstatus
  labels:
    name: u-ltdstatus
spec:
  type: NodePort
  ports:
  - name: http
    port: 5003
    targetPort: 5000
    protocol: TCP
  selector:
    name: u-ltdstatus
